--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prima Healthcare</title>
   </head>
